--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
-<a>你好</a>
+<a>YouAKIOI</p>
+<div class="lg-article">
+                <h2 style="margin-bottom: 5px;">近期比赛</h2>
+                                                        <section class="am-panel lg-index-contest am-panel-success">
+                        <header class="am-panel-hd">
+                            <h3 class="am-panel-title">
+                                <a href="/contest/127474">
+                                    【LGR-184-Div.3】洛谷基础赛 #11 &amp;「…
+                                </a>
+                                <span class="am-badge am-radius lg-bg-green">Rated</span>
+                            </h3>
+                        </header>
+                        <div class="am-panel-bd">
+                            <span class="lg-small lg-inline-up">
+                                <span class="am-badge am-radius lg-bg-red">官方比赛</span><br>
+                                <span class="am-badge am-radius lg-bg-yellow">IOI</span>                            </span>
+                            <span class="lg-small lg-inline-up">
+                                <strong class="lg-fg-green">未开始</strong>                                6天23时21分后                                <br>
+                                                                    <a class="colored" href="/team/show?teamid=1000" target="_blank">洛谷官方团队</a>                                
+                            </span>
+                            <span class="lg-small lg-inline-up lg-right lg-md-hide">
+                                05-12 14:00<br>
+                                05-12 18:00                            </span>
+                        </div>
+                    </section>
+                                                        <section class="am-panel lg-index-contest am-panel-success">
+                        <header class="am-panel-hd">
+                            <h3 class="am-panel-title">
+                                <a href="/contest/170286">
+                                    【LGR-187-Div.4】洛谷入门赛 #23
+                                </a>
+                                <span class="am-badge am-radius lg-bg-green">Rated</span>
+                            </h3>
+                        </header>
+                        <div class="am-panel-bd">
+                            <span class="lg-small lg-inline-up">
+                                <span class="am-badge am-radius lg-bg-red">官方比赛</span><br>
+                                <span class="am-badge am-radius lg-bg-yellow">IOI</span>                            </span>
+                            <span class="lg-small lg-inline-up">
+                                <strong class="lg-fg-green">未开始</strong>                                12天4时21分后                                <br>
+                                                                    <a class="colored" href="/team/show?teamid=1000" target="_blank">洛谷官方团队</a>                                
+                            </span>
+                            <span class="lg-small lg-inline-up lg-right lg-md-hide">
+                                05-17 19:00<br>
+                                05-17 21:00                            </span>
+                        </div>
+                    </section>
+                                                        <section class="am-panel lg-index-contest am-panel-success">
+                        <header class="am-panel-hd">
+                            <h3 class="am-panel-title">
+                                <a href="/contest/170180">
+                                    【LGR-186-Div.2】洛谷算法基础赛 #2 …
+                                </a>
+                                <span class="am-badge am-radius lg-bg-green">Rated</span>
+                            </h3>
+                        </header>
+                        <div class="am-panel-bd">
+                            <span class="lg-small lg-inline-up">
+                                <span class="am-badge am-radius lg-bg-red">官方比赛</span><br>
+                                <span class="am-badge am-radius lg-bg-orange">OI</span>                            </span>
+                            <span class="lg-small lg-inline-up">
+                                <strong class="lg-fg-green">未开始</strong>                                13天23时21分后                                <br>
+                                                                    <a class="colored" href="/team/show?teamid=1000" target="_blank">洛谷官方团队</a>                                
+                            </span>
+                            <span class="lg-small lg-inline-up lg-right lg-md-hide">
+                                05-19 14:00<br>
+                                05-19 18:00                            </span>
+                        </div>
+                    </section>
+                                                        <section class="am-panel lg-index-contest am-panel-danger">
+                        <header class="am-panel-hd">
+                            <h3 class="am-panel-title">
+                                <a href="/contest/166040">
+                                    【LGR-183-Div.3】复旦勰码基础赛 #10…
+                                </a>
+                                <span class="am-badge am-radius lg-bg-green">Rated</span>
+                            </h3>
+                        </header>
+                        <div class="am-panel-bd">
+                            <span class="lg-small lg-inline-up">
+                                <span class="am-badge am-radius lg-bg-red">官方比赛</span><br>
+                                <span class="am-badge am-radius lg-bg-yellow">IOI</span>                            </span>
+                            <span class="lg-small lg-inline-up">
+                                <strong class="lg-fg-red">已结束</strong>                                比赛已结束                                <br>
+                                                                    <a class="colored" href="/team/show?teamid=1000" target="_blank">洛谷官方团队</a>                                
+                            </span>
+                            <span class="lg-small lg-inline-up lg-right lg-md-hide">
+                                05-04 14:00<br>
+                                05-04 18:00                            </span>
+                        </div>
+                    </section>
+                                                        <section class="am-panel lg-index-contest am-panel-danger">
+                        <header class="am-panel-hd">
+                            <h3 class="am-panel-title">
+                                <a href="/contest/167054">
+                                    SMOI Round 1
+                                </a>
+                                
+                            </h3>
+                        </header>
+                        <div class="am-panel-bd">
+                            <span class="lg-small lg-inline-up">
+                                <span class="am-badge am-radius lg-bg-greendark">团队公开赛</span><br>
+                                <span class="am-badge am-radius lg-bg-yellow">IOI</span>                            </span>
+                            <span class="lg-small lg-inline-up">
+                                <strong class="lg-fg-red">已结束</strong>                                比赛已结束                                <br>
+                                                                    <a class="colored" href="/team/show?teamid=77567" target="_blank">SMOI</a>                                
+                            </span>
+                            <span class="lg-small lg-inline-up lg-right lg-md-hide">
+                                05-03 14:00<br>
+                                05-03 18:00                            </span>
+                        </div>
+                    </section>
+                                                        <section class="am-panel lg-index-contest am-panel-danger">
+                        <header class="am-panel-hd">
+                            <h3 class="am-panel-title">
+                                <a href="/contest/146851">
+                                    XSOI Round 1
+                                </a>
+                                
+                            </h3>
+                        </header>
+                        <div class="am-panel-bd">
+                            <span class="lg-small lg-inline-up">
+                                <span class="am-badge am-radius lg-bg-greendark">团队公开赛</span><br>
+                                <span class="am-badge am-radius lg-bg-yellow">IOI</span>                            </span>
+                            <span class="lg-small lg-inline-up">
+                                <strong class="lg-fg-red">已结束</strong>                                比赛已结束                                <br>
+                                                                    <a class="colored" href="/team/show?teamid=67358" target="_blank">Chengdu Question Bank</a>                                
+                            </span>
+                            <span class="lg-small lg-inline-up lg-right lg-md-hide">
+                                05-03 09:30<br>
+                                05-03 12:30                            </span>
+                        </div>
+                    </section>
+                            </div>
